--- a/_posts/2024-09-08-동시성.md
+++ b/_posts/2024-09-08-동시성.md
@@ -1,14 +1,14 @@
 ---
-title: 동시성
-categories: [jvm]
-tags: [jvm, cs, jvm밑바닥까지파해치기, concurrency]
+title: 동시성(Concurrency)
+categories: [cs]
+tags: [cs, jvm밑바닥까지파해치기, concurrency]
 author: aram
 toc: true
 comment: true
 ---
 # 동시성(Concurrency)
 
-동시성은 여러 작업이 동일한 시간 범위 내에 실행되는 것을 말합니다. 이는 같은 순간에 실행되는 것을 의미하지는 않지만, 전체적으로 보았을 때 병렬로 처리되는 작업을 의미.
+동시성은 여러 작업이 동일한 시간 범위 내에 실행되는 것을 말한다. 이는 같은 순간에 실행되는 것을 의미하지는 않지만, 전체적으로 보았을 때 병렬로 처리되는 작업을 의미.
 
 같은 시간에 함께 실행되는 의미가 아닌 같은 시기에 일어난 의미로 생각해야 한다.
 
